@@ -1,3 +1,2 @@
-DIST smplayer2-0.7.2_p20120522.tar.xz 1034192 SHA256 ae5dfe328208dc34a53d1439a9cbc1b4f3197fca2dd6e10f2fa5725296617e49 SHA512 00cb91447d75a0a6ef9aecd98c657de7b07cc8d0c09a73ab87ffc374a048e7926fb069a234920f2eca2c02a6798473c062347d3cf0763695bb8d035bc170cdc0 WHIRLPOOL b9d36e4a5b76b8d0fb8f56047688b0ffeb19c40ee985ab3e7ad39fbefbf98cc6e3a6200f7c5d73d9b373bc791ecc06ef6a7b40b275fe67695d236547efe7d98e
-DIST smplayer2-0.7.3_p20120524.tar.xz 1033904 SHA256 36683db9a421abd4a08e2bea3708bc98d9cc8c2e91fb955c5c977c74c56e98f9 SHA512 a55454d9cef6b6c349af98e06dacb2517620068a9acad2e6f803d5111737a193e71f96082737c7621073893a1fd85d7a8193a332fde63fb69a0de6b3d4df6c08 WHIRLPOOL c2c4fb8f0e7cedc2fbbd00fcee65a39757c770a94769c7d30e5ac05f0a831a21074b712e74321e8c5c87b7bdf66d1935cb55ffea2d75805ce8198c4d9116f59e
 DIST smplayer2-0.8.0_p20121214.tar.xz 988956 SHA256 1ffe08efb761b64b5e84320c6242545b0457a088015a419fdb7b2684c731e04e SHA512 7aea6b5aab60e2d52153cf60e592de1d69aee1cf5847aa23a83c3c442c39f92591cd9c8fd5a420b7e79162e87a365ba5145d0130151d7020c9fed9257edf0ef0 WHIRLPOOL 180876e3f1887a5eb75a6b00c4ab75af61f2df1e617f33e70289a49dabd5ef536af4c1e81afa68b42f0cd8f1d54ecd8518c29ecfc38975f320f711fc65687922
+DIST smplayer2-0.8.0_p20130111.tar.xz 989320 SHA256 2b97826d99804bf1c86bf4e438763394be776e423fd96e196cfc1273e3a62b92 SHA512 3e0aa77588a9b3c829fbfa350dea14b55aa88560ae796a6b2897cb3cadb6b6d71b2a5b2ab2eccc2021b201cfeeebea24d781939ad30633737dd523789ff10788 WHIRLPOOL c4fac2391b14ebe3ee34f0b535512c9e0f0ccdd2f87298c3b0ed841ed3075b4b397e83de0d1a01ca5a58194df916f4da150cddae7ef726ffefb96f4bb3607a09
