@@ -1,6 +1,12 @@
 # ChangeLog for media-video/smplayer2
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*smplayer2-0.8.0_p20130111 (01 Feb 2013)
+
+  01 Feb 2013; Nikoli <nikoli@lavabit.com> -smplayer2-0.7.2_p20120522.ebuild,
+  -smplayer2-0.7.3_p20120524.ebuild, +smplayer2-0.8.0_p20130111.ebuild:
+  new snapshot, rm old
 
 *smplayer2-0.8.0_p20121214 (15 Dec 2012)
 
